<resources>
    <string name="app_name">Remember</string>

    <string name="action_settings">Settings</string>

    <!--Splash-->
    <string name="splash_screen">Splash screen</string>
    <string name="splash_title" translatable="false">Remember</string>
    <string name="splash_link">echodc.ru/android</string>

    <!-- Menu-->
    <string name="do_not_show_splash">Do not show splash</string>



    <!--Activity-->
    <string name="current_task">Current</string>
    <string name="done_task">Done</string>

    <!-- Dialogs-->
    <string name="dialog_title">Adding task</string>
    <string name="dialog_editing_title">Editing task</string>
    <string name="dialog_task_title">Title</string>
    <string name="dialog_task_date">Date</string>
    <string name="dialog_task_time">Time</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_Cancel">Cancel</string>
    <string name="dialog_error_empty_title">Please, enter the title.</string>
    <string name="dialog_removing_message">Are you sure want to delete this task?</string>
    <string name="dialog_send_mail_title">Send E-mail</string>
    <string name="dialog_mail_title">Theme of mail</string>
    <string name="dialog_mail_message">Message</string>
    <string name="dialog_error_empty_mail_title">Please, enter the mail title.</string>

    <!-- SnackBar-->
    <string name="removed">Removed</string>

    <!-- Separators-->
    <string name="separator_overdue">Overdue</string>
    <string name="separator_today">Today</string>
    <string name="separator_tomorrow">Tomorrow</string>
    <string name="separator_future">Future</string>
    <string name="separator_repeat">Repeatable</string>


    <!-- Toasts-->
    <string name="task_added">Task added.</string>
    <string name="task_adding_cancel">Task adding cancel.</string>
    <string name="moved_to_current">Moved in the current</string>
    <string name="moved_to_done">Moved in the done</string>

    <!-- Banner-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8191763105477673/2827062342</string>

    <!-- Days of week-->
    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="repeat">Repeat</string>
    <string name="new_time">time</string>

    <!-- Spinner priority-->
    <string-array name="priority">
        <item>Low priority</item>
        <item>Normal priority</item>
        <item>High priority</item>
    </string-array>


    <!-- About-->
    <string name="authors">Authors</string>
    <string name="max">Max Bagryantsev</string>
    <string name="max_email" translatable="false">bagryanetz@gmail.com</string>
    <string name="max_vk_link" translatable="false">https://vk.com/ciklodol</string>
    <string name="max_facebook_link" translatable="false">https://www.facebook.com/bagryanetzz</string>
    <string name="imgTextMax">Max</string>

    <string name="yarik">Yarik</string>
    <string name="yarik_email" translatable="false">***</string>
    <string name="yarik_vk_link" translatable="false">***</string>
    <string name="yarik_facebook_link" translatable="false">***</string>
    <string name="imgTextYarik">Yarik</string>

    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="snackbar_mail_sending">Your letter sent</string>
    <string name="send_mail">Send mail...</string>
    <string name="email_message">Email message goes here</string>
    <string name="subject">Your subject</string>
    <string name="toast_error_email_client_not_installed">There is no email client installed.</string>
    <string name="select_the_recipient">Select the recipient</string>
    <string name="dialog_mail_recipient">Recipient</string>
    <string name="select_email_client">Select e-mail client:</string>


</resources>