<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ru.echodc.ru.remember.fragment.SplashFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:text="@string/splash_title"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/splash_screen"
            android:padding="10dp"
            android:src="@drawable/ic_remember_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/splash_link"
            android:textColor="@color/secondary_text"
            android:textSize="25sp" />
    </LinearLayout>


</FrameLayout>
